--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,7 @@ a {
   width: 320px;
   height: auto;
 }
-.info {
-  /* display: flex; */
-}
+
 .title-info {
   font-size: 36px;
   font-weight: bolder;
@@ -72,6 +70,7 @@ a {
   display: flex;
   gap: 40px;
   justify-content: center;
+  margin-bottom: 32px;
 }
 .card-info {
   text-align: center;
@@ -82,4 +81,26 @@ a {
   border-radius: 15px;
   width: 150px;
   height: 150px;
+}
+.quote {
+  background-color: #E5E7EB;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.actual-quote {
+  width: 90%;
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+}
+.who-wrote {
+  width: 90%;
+  font-weight: 700;
+  text-align: right;
+  padding-right: 80px;
 }
