--- a/styles.css
+++ b/styles.css
@@ -133,3 +133,8 @@ a {
   font-weight: bolder;
   font-size: 24px;
 }
+.footer {
+  height: 120px;
+  justify-content: center;
+  align-items: center;
+}
